--- a/index.html
+++ b/index.html
@@ -6,5 +6,18 @@
 	</head>
 	<body>
 		<h1>Welcome to Blackjack!</h1>
+		<div class="wrapper">
+			<div class="dealer-box box">
+				<div class="cards">
+					dealer cards
+				</div>
+			</div>
+			<div class="player-box box">
+				<div class="cards">
+					player cards
+				</div>
+			</div>
+		</div>
 	</body>
+	<script src="js/app.js"></script>
 </html>
