generate card and suit

--- a/index.html
+++ b/index.html
@@ -8,15 +8,18 @@
 		<h1>Welcome to Blackjack!</h1>
 		<div class="wrapper">
 			<div class="dealer-box box">
-				<div class="cards">
-					dealer cards
+				<div id="dealer-cards" class="card">
+					
 				</div>
 			</div>
 			<div class="player-box box">
-				<div class="cards">
-					player cards
+				<div id="player-cards" class="card">
+					
 				</div>
 			</div>
+			<button id="deal">
+				Deal
+			</button>
 		</div>
 	</body>
 	<script src="js/app.js"></script>
