dynamic card creation functionality is working

--- a/index.html
+++ b/index.html
@@ -14,10 +14,12 @@
 			</div>
 			<div class="player-box box">
 				<div id="player-cards" class="card">
-					
+					<div class="top-left">
+						
+					</div>
 				</div>
 			</div>
-			<button id="deal">
+			<button id="deal-button" class="deal-button">
 				Deal
 			</button>
 		</div>
