trying to rethink the logic of my app. saving old logic just in case.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 			<div class="dealer-box box">
 				<h2>Dealer</h2>
 				<div class="dealer-cards card-wrapper"></div>
+				<div class="dealer-cards card-wrapper"></div>
 			</div>
 			<div class="player-box box">
 				<h2>Player</h2>
+				<div class="player-cards card-wrapper"></div>
 				<div class="player-cards card-wrapper"></div>
 			</div>
 			<button id="deal-button" class="deal-button">Deal</button>
