--- a/index.html
+++ b/index.html
@@ -9,15 +9,19 @@
 		<div class="wrapper">
 			<div class="dealer-box box">
 				<h2>Dealer</h2>
-				<div class="dealer-cards card-wrapper"></div>
-				<div class="dealer-cards card-wrapper"></div>
+				<div class="card-wrapper">
+					<div class="dealer-cards"></div>
+				</div>
 			</div>
 			<div class="player-box box">
 				<h2>Player</h2>
-				<div class="player-cards card-wrapper"></div>
-				<div class="player-cards card-wrapper"></div>
+				<div class="card-wrapper">
+					<div class="player-cards"></div>
+				</div>
 			</div>
 			<button id="deal-button" class="deal-button">Deal</button>
+			<button id="hit-me" class="hit-button">Hit Me!</button>
+			<button id="stay" class="stand-button">I'll Stay!</button>
 		</div>
 	</body>
 	<script src="js/app.js"></script>
