got 'hit' functionality to work. still tweaking the 'deal' functionality a bit

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 					<div class="player-cards"></div>
 				</div>
 			</div>
-			<button id="deal-button" class="deal-button">Deal</button>
-			<button id="hit-me" class="hit-button">Hit Me!</button>
-			<button id="stay" class="stand-button">I'll Stay!</button>
+			<button id="deal-button" class="deal-button button">Deal</button>
+			<button id="hit-me" class="hit-button button">Hit Me!</button>
+			<button id="stay" class="stand-button button">I'll Stay!</button>
 		</div>
 	</body>
 	<script src="js/app.js"></script>
