trying to revert

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 		<h1>Welcome to Blackjack!</h1>
 		<div class="wrapper">
 			<div class="dealer-box box">
-				<h2>Dealer <span class="score"></span></h2>
+				<h2>Dealer</h2>
 				<div class="card-wrapper">
 					<div class="dealer-cards"></div>
 				</div>
 			</div>
 			<div class="player-box box">
-				<h2>Player <span class="score"></span></h2>
+				<h2>Player</h2>
 				<div class="card-wrapper">
 					<div class="player-cards"></div>
 				</div>
