--- a/index.html
+++ b/index.html
@@ -19,9 +19,24 @@
 					<div class="player-cards"></div>
 				</div>
 			</div>
-			<button id="deal-button" class="deal-button button">Deal</button>
-			<button id="hit-me" class="hit-button button">Hit Me!</button>
-			<button id="stay" class="stand-button button">I'll Stay!</button>
+			<div class="actions">
+				<ul class="bets">
+					<li><a href="/" class="chip" data-value="1"><span>1</span></a></li>
+					<li><a href="/" class="chip" data-value="5"><span>5</span></a></li>
+					<li><a href="/" class="chip" data-value="25"><span>25</span></a></li>
+					<li><a href="/" class="chip" data-value="100"><span>100</span></a></li>
+					<li><a href="/" class="chip" data-value="500"><span>500</span></a></li>
+					<li><a href="/" class="chip" data-value="1000"><span>1,000</span></a></li>
+				</ul>
+				<!-- /.bets -->
+				<div class="in-game">
+					<button id="deal-button" class="deal-button button">Deal</button>
+					<button id="hit-me" class="hit-button button">Hit Me!</button>
+					<button id="stay" class="stand-button button">I'll Stay!</button>
+				</div>
+				<!-- /.game-actions -->
+			</div>
+			<!-- /.actions -->
 		</div>
 	</body>
 	<script src="js/app.js"></script>
