--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 			</div>
 			<div class="actions">
 				<ul class="bets">
-					<li><a href="/" class="chip" data-value="1"><span>1</span></a></li>
-					<li><a href="/" class="chip" data-value="5"><span>5</span></a></li>
-					<li><a href="/" class="chip" data-value="25"><span>25</span></a></li>
-					<li><a href="/" class="chip" data-value="100"><span>100</span></a></li>
-					<li><a href="/" class="chip" data-value="500"><span>500</span></a></li>
-					<li><a href="/" class="chip" data-value="1000"><span>1,000</span></a></li>
+					<li><a href="/" class="chip" data-value="1"></a></li>
+					<li><a href="/" class="chip" data-value="5"></a></li>
+					<li><a href="/" class="chip" data-value="25"></a></li>
+					<li><a href="/" class="chip" data-value="100"></a></li>
+					<li><a href="/" class="chip" data-value="500"></a></li>
+					<li><a href="/" class="chip" data-value="1000"></a></li>
 				</ul>
 				<!-- /.bets -->
 				<div class="in-game">
