fix bad wager math, disable over-betting, make css compile to only one css file

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 			<div class="wager-total">
 				<div class="amount">
 					<h3>Cash</h3>
-					<div class="cash">1500</div>
+					<div class="cash"></div>
 				</div>
 				<div class="amount">
 					<h3>Bet</h3>
