--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 					<h3>Bet</h3>
 					<div class="bet">0</div>
 				</div>
-				<button id="reset" class="button">Reset</button>
+				<button id="reset">Reset</button>
 			</div>
 			<ul class="bets">
 				<li><a href="/" class="chip" data-value="1"></a></li>
