--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	</head>
 	<body>
 		<div class="wrapper">
+			<div class="winner-is">asdf</div>
 			<div class="wager-total">
 				<div class="amount">
 					<h3>Cash</h3>
