style winners div

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	</head>
 	<body>
 		<div class="wrapper">
-			<div class="winner-is"></div>
+			<div class="winner-is"><p></p></div>
 			<div class="wager-total">
 				<div class="amount">
 					<h3>Cash</h3>
